@@ -798,14 +798,17 @@ $result_converted{'html_text'}->{'itemize_in_example'} = '<div class="example">
 more.
 </pre></li></ul>
 <pre class="example">
+
 </pre><ul class="no-bullet">
 <li> <pre class="example">as is
 </pre></li></ul>
 <pre class="example">
+
 </pre><ul class="no-bullet">
 <li>+ <pre class="example">item +
 </pre></li></ul>
 <pre class="example">
+
 </pre><ul class="no-bullet">
 <li>&bull; a&ndash;n itemize line <pre class="example">in an itemize line
 </pre></li></ul>
