@@ -860,16 +860,20 @@ ul.no-bullet {list-style: none}
 <div class="example">
 <table class="menu" border="0" cellspacing="0"><tr><td>
 <pre class="menu-preformatted">&bull; <a href="entry.html#Top" accesskey="1">(entry)</a>::
+
 </pre><table class="cartouche" border="1"><tr><td>
 <pre class="menu-preformatted">in cartouche in description in menu in example
 </pre></td></tr></table>
 </pre><pre class="menu-comment">
+
 </pre><table class="cartouche" border="1"><tr><td>
 <pre class="menu-comment">in cartouche in menu comment in menu in example
 </pre></td></tr></table>
 <pre class="menu-comment">
+
 </pre><pre class="menu-preformatted">&bull; <a href="node.html#menu" accesskey="2">(node) menu</a>::      a node in menu
 </pre><pre class="menu-preformatted">&bull; a menu name:<a href="other.html#node" accesskey="3">(other) node</a>. 
+
 </pre></td></tr></table>
 </div>
 <hr>
